deploy/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: my-python-app-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: my-python-app
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: my-python-app
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/andres-cidel-dev/my-python-app@sha256:71787b252bfb24babfba5adb257b664c0c7a17a5f8cef47c206d1824a1f0aa03
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - app
      from:
        kind: ImageStreamTag
        name: my-python-app:latest
        namespace: andres-cidel-dev
      lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/andres-cidel-dev/my-python-app@sha256:71787b252bfb24babfba5adb257b664c0c7a17a5f8cef47c206d1824a1f0aa03
    type: ImageChange
