deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-python-app-deployment
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: my-python-app
  type: ClusterIP
