deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-python-app-deployment
spec:
  host: my-python-app-deployment-andres-cidel-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
  port:
    targetPort: 5000
  to:
    kind: Service
    name: my-python-app-deployment
    weight: 100
  wildcardPolicy: None
